compiler/testData/cli/jvm/newInferenceWithOldFlagImpliesSamConversions.out
compiler/testData/cli/jvm/newInferenceImpliesSamConversions.kt:4:9: error: type mismatch: inferred type is () -> Unit but Runnable was expected
    foo { }
        ^
COMPILATION_ERROR
